--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>這是test.html的ver3.3 for real branch1</title>
+    <title></title>
     <style>
 
     </style>
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    hello this is ver 3.3
+    hello this is ver 4.0
     <table width="500" border="1">
         <caption>期中考成績</caption>
         <thead>
