--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>4.1</title>
     <style>
 
     </style>
@@ -22,7 +22,9 @@
 </head>
 
 <body>
-    hello this is ver 4.0
+    hello this is ver 4.1
+    4.1
+    a + b
     <table width="500" border="1">
         <caption>期中考成績</caption>
         <thead>
